[gd_scene load_steps=2 format=3 uid="uid://c8lam4n5p6q7r"]

[ext_resource type="Script" path="res://scripts/Lobby.gd" id="1_1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="RoomCodeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CÃ³digo da Sala: "
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="CopyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Copiar OID"
visible = false

[node name="PlayersLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Jogadores (0/4):"
horizontal_alignment = 1
custom_minimum_size = Vector2(0, 170)
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Iniciar Jogo"
disabled = true

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Voltar"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/CopyButton" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_pressed"]

